--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,6 @@ bind l select-pane -R
 unbind %
 bind | split-window -h
 bind - split-window -v
+
+# fix Phonegap
+set-option -g default-command "reattach-to-user-namespace -l bash"
