--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,16 @@ set -g default-terminal "screen-256color"
 set-option -g prefix C-a
 bind-key C-a last-window
 set -g base-index 1
+#
 # Set status bar
 set -g status-bg black
 set -g status-fg white
 set -g status-left ""
-set -g status-right "#[fg=green]#H"
+set -g status-interval 2
+set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)"
+set -g status-right-length 120
+
+# set -g status-right "#[fg=green]#H"
 set-window-option -g window-status-current-bg red
 setw -g mode-keys vi
 bind h select-pane -L
