--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,9 +6,9 @@ set -g base-index 1
 # Set status bar
 set -g status-bg black
 set -g status-fg white
-set -g status-left ""
 set -g status-interval 2
-set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)"
+set -g status-left ""
+set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
 set -g status-right-length 120
 
 # set -g status-right "#[fg=green]#H"
@@ -23,6 +23,3 @@ bind l select-pane -R
 unbind %
 bind | split-window -h
 bind - split-window -v
-
-# fix Phonegap
-set-option -g default-command "reattach-to-user-namespace -l bash"
