--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,8 @@ set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
 set -g status-left ""
-set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
+#set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
+set -g status-right "#[fg=green]#H"
 set -g status-right-length 120
 
 # set -g status-right "#[fg=green]#H"
