--- a/.ssh/config
+++ b/.ssh/config
@@ -8,3 +8,10 @@ LocalForward 9000 127.0.0.1:9000
 LocalForward 9443 127.0.0.1:9443
 LocalForward 11111 127.0.0.1:11111
 LocalForward 8001 127.0.0.1:8001
+LocalForward 3306 127.0.0.1:3306
+LocalForward 3000 127.0.0.1:3000
+LocalForward 35729 127.0.0.1:35729
+
+Host madlan-demo
+HostName 54.78.59.183
+User ubuntu
