--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @sidebar-tree-command 'tree -a -C -L 3'
+
 set -g default-terminal "screen-256color"
 set-option -g prefix C-a
 bind-key C-a last-window
@@ -24,3 +27,6 @@ bind l select-pane -R
 unbind %
 bind | split-window -h
 bind - split-window -v
+#
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
