--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,15 @@
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -a -C -L 3'
-
 set -g default-terminal "screen-256color"
 set-option -g prefix C-a
 bind-key C-a last-window
 set -g base-index 1
-#
+
 # Set status bar
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
 set -g status-left ""
-#set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
-set -g status-right "#[fg=green]#H"
-set -g status-right-length 120
+set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
 
-# set -g status-right "#[fg=green]#H"
 set-window-option -g window-status-current-bg red
 setw -g mode-keys vi
 bind h select-pane -L
@@ -27,6 +21,3 @@ bind l select-pane -R
 unbind %
 bind | split-window -h
 bind - split-window -v
-#
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
