--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
 set -g status-left ""
-set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S | #(whoami)@#(hostname) "
+set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S"
 set -g status-right-length 256
 
 set-window-option -g window-status-current-bg red
