--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g status-left ""
 set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2) | #S"
 set -g status-right-length 256
 
-set-window-option -g window-status-current-bg red
+setw -g window-status-current-style bg=red
 setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
@@ -22,3 +22,5 @@ bind l select-pane -R
 unbind %
 bind | split-window -h
 bind - split-window -v
+
+set -g mouse on
