--- a/.ssh/config
+++ b/.ssh/config
@@ -1,17 +1,4 @@
-Host *
-ServerAliveInterval 60
-
-Host danny-machine-1
-HostName 54.74.48.200
-User ubuntu
-LocalForward 9000 127.0.0.1:9000
-LocalForward 9443 127.0.0.1:9443
-LocalForward 11111 127.0.0.1:11111
-LocalForward 8001 127.0.0.1:8001
-LocalForward 3306 127.0.0.1:3306
-LocalForward 3000 127.0.0.1:3000
-LocalForward 35729 127.0.0.1:35729
-
-Host madlan-demo
-HostName 54.78.59.183
-User ubuntu
+Host linode
+    LocalForward 35729 127.0.0.1:35729
+    HostName 170.187.187.38
+    User daniel
