--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -gu default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 set-option -g prefix C-a
 bind-key C-a last-window
 
