--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,6 @@
 Host linode
     LocalForward 35729 127.0.0.1:35729
-    HostName 170.187.187.38
+    HostName danielbraun.xyz
     RemoteCommand tmux at
     RequestTTY yes
     User daniel
