--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -6,5 +6,6 @@ bindings = [
   { key = "t",     mods = "Command", chars = "\u0014" },
   { key = "w",     mods = "Command", chars = ":q\n" },
   { key = 33, mods = "Command | Shift", chars = "gT" },
-  { key = 30, mods = "Command | Shift", chars = "gt" }
+  { key = 30, mods = "Command | Shift", chars = "gt" },
+  { key = "Tab" , mods = "Control", chars = ":tabnext #\n" }
 ]
