--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,25 @@
 set -g default-terminal "screen-256color"
 set-option -g prefix C-a
 bind-key C-a last-window
-
 set -g base-index 1
+
+# Set status bar
 set -g status-bg black
 set -g status-fg white
-set -g window-status-current-style bg=blue
-
-set -g status-left ""
 set -g status-interval 2
-set -g status-right "#[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2 --averages-count 0) | %H:%M %d-%b-%y"
-set -g status-right-length 256
-set -g mode-keys vi
+set -g status-left ""
+set -g status-right "#(tmux-mem-cpu-load --colors --averages-count 0 --graph-line 0)"
 
+set -g status-right-length 256
+
+setw -g window-status-current-style bg=red
+setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Easy bindings for split
 unbind %
 bind | split-window -h
 bind - split-window -v
