--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g status-bg black
 set -g status-fg white
 set -g status-interval 2
 set -g status-left ""
-set -g status-right "#(tmux-mem-cpu-load --colors --averages-count 0 --graph-line 0)"
+set -g status-right "#(tmux-mem-cpu-load --colors --averages-count 0 --graph-line 0) | #(date +%H:%M) "
 
 set -g status-right-length 256
 
